Исправлены недоработки общения с пользователем и текущий интерфейс в панели инструментов

--- a/PW13/PW13.csproj
+++ b/PW13/PW13.csproj
@@ -130,5 +130,11 @@
     <Resource Include="icons\CreateEmptyTable.ico" />
     <Resource Include="icons\FillTable.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icons\AddColumn.ico" />
+    <Resource Include="icons\AddRow.ico" />
+    <Resource Include="icons\DelColumn.ico" />
+    <Resource Include="icons\DelRow.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
